tests/ill_typed/if_stmt.mist
def foo(a: Int): Int = a

val x = if (true) 1 else "2"
foo(x)